// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submit is successful 1`] = `
Object {
  "ok": true,
  "result": Object {
    "ids": Array [
      "42",
    ],
    "records": Array [
      Object {
        "id": "42",
        "revision": "1",
      },
    ],
    "revisions": Array [
      "1",
    ],
  },
}
`;

exports[`Submit is successful 2`] = `
Object {
  "ok": true,
  "result": Object {
    "ids": Array [
      "43",
    ],
    "records": Array [
      Object {
        "id": "43",
        "revision": "1",
      },
    ],
    "revisions": Array [
      "1",
    ],
  },
}
`;

exports[`Submit is successful 3`] = `
Object {
  "ok": true,
  "result": Object {
    "ids": Array [
      "44",
    ],
    "records": Array [
      Object {
        "id": "44",
        "revision": "1",
      },
    ],
    "revisions": Array [
      "1",
    ],
  },
}
`;

exports[`Submit is successful 4`] = `
Object {
  "ok": true,
  "result": Object {
    "ids": Array [
      "45",
    ],
    "records": Array [
      Object {
        "id": "45",
        "revision": "1",
      },
    ],
    "revisions": Array [
      "1",
    ],
  },
}
`;

exports[`Submit is successful 5`] = `
Object {
  "ok": true,
  "result": Object {
    "ids": Array [
      "46",
    ],
    "records": Array [
      Object {
        "id": "46",
        "revision": "1",
      },
    ],
    "revisions": Array [
      "1",
    ],
  },
}
`;

exports[`Submit is successful 6`] = `
Object {
  "ok": true,
  "result": Object {
    "ids": Array [
      "47",
    ],
    "records": Array [
      Object {
        "id": "47",
        "revision": "1",
      },
    ],
    "revisions": Array [
      "1",
    ],
  },
}
`;

exports[`Submit is successful 7`] = `
Object {
  "ok": true,
  "result": Object {
    "ids": Array [
      "48",
    ],
    "records": Array [
      Object {
        "id": "48",
        "revision": "1",
      },
    ],
    "revisions": Array [
      "1",
    ],
  },
}
`;

exports[`Submit is successful 8`] = `
Object {
  "ok": true,
  "result": Object {
    "ids": Array [
      "49",
    ],
    "records": Array [
      Object {
        "id": "49",
        "revision": "1",
      },
    ],
    "revisions": Array [
      "1",
    ],
  },
}
`;

exports[`Submit is successful 9`] = `
Object {
  "ok": true,
  "result": Object {
    "ids": Array [
      "50",
    ],
    "records": Array [
      Object {
        "id": "50",
        "revision": "1",
      },
    ],
    "revisions": Array [
      "1",
    ],
  },
}
`;

exports[`Submit is successful 10`] = `
Object {
  "ok": true,
  "result": Object {
    "ids": Array [
      "51",
    ],
    "records": Array [
      Object {
        "id": "51",
        "revision": "1",
      },
    ],
    "revisions": Array [
      "1",
    ],
  },
}
`;
